package myCode;

public interface Check {
    // to do
}
