package myCode;

public class EqualsHashCodeCheck {
    // to do
}
