package myCode;

public class NamingConventionCheck {
    // to do
}
