package myCode;

public class PublicConstructorCheck {
    // to do
}
